# myrss

./: README.md  flake.nix
hmhschatroom/: Cargo.toml  build.rs  tailwind.config.js
hmhschatroom/src/: db.rs  errors.rs  main.rs  models.rs  router.rs  routes.rs  tailwind.css  templates.rs
hmhschatroom/templates/: base.html  index.html  message.html  room.html  rooms.html  styles.css  tailwind.css  view-room.html
myrss/: .gitignore  Cargo.toml  build.rs  flake.nix  justfile  tailwind.css
myrss/assets/: feed.js  tailwind.css
myrss/migrations/: 0001_init.sql  0002_msgrel.sql
myrss/src/: ai.rs  aisysmsg.txt  errors.rs  main.rs  models.rs  router.rs  routes.rs  templates.rs
myrss/templates/: banned-name.html  base.html  feed.html  index.html  message.html  room.html  rooms.html  tailwind.css
