[package]
name = "myrss"
version = "0.1.0"
edition = "2021"

[dependencies]
ammonia = "4.0.0"
anyhow = "1.0.94"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.9", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["cookie"] }
chrono = "0.4.38"
env_logger = "0.11.5"
futures = "0.3.30"
groq-api-rust = "0.2.51"
log = "0.4.22"
markdown = { version = "1.0.0-alpha.21", features = ["log"] }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
shuttle-shared-db = { version = "0.47.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.2", features = ["chrono"] }
tokio = "1.28.2"
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower-http = { version = "0.6.2", features = ["fs"] }
